Docker compose file

--- a/pom.xml
+++ b/pom.xml
@@ -45,7 +45,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
-		<finalName>spring-boot-fib-docker</finalName>
+		<finalName>backend</finalName>
 	</build>
 
 </project>
